# EyeMath_backend_monorepository

./: .env  .env.example  .gitignore  README.md  ROADMAP.md  _Headers_.py  _Math_Lib_ — копия.cpp  _Math_Lib_.cpp  _Math_Lib_.h  _Math_Lib_.py  _Math_Solving_  _Math_Solving_.cpp  _Server_.py  config.toml  docker-bake.hcl  docker-compose.yaml  startup.py
.github/wokkflows/: check.yml
.github/workflows/: check.yml
.github/workflowss/: check.yml
API_GATEWAY/: .air.toml  Dockerfile  Server.go  go.mod
EXTERNAL_API_GATEWAY/: .air.toml  Dockerfile  external_api_config.toml  external_api_gateway.go  go.mod  go.sum
EXTERNAL_API_GATEWAY/app/: app.go
EXTERNAL_API_GATEWAY/app/grpc/: app.go
EXTERNAL_API_GATEWAY/grpc/auth/: server.go
EXTERNAL_API_GATEWAY/grpc/handler/: handler.go  server.go
EXTERNAL_API_GATEWAY/proto/: external_api_gateway.proto
MATH_SOLVE/: Math_Lib.py  dockerfile  math_config.toml  math_solve.py  req.txt
MATH_SOLVE/debug/: debug.json
SERVICE_MATH_RECOGNIZE/: dockerfile  pyproject.toml  setup.py
SERVICE_MATH_RECOGNIZE/proto/: service_math_recognize.proto
SERVICE_MATH_RECOGNIZE/src/core/: config.py  utils.py
SERVICE_MATH_RECOGNIZE/src/services/: grpc_server.py  latex_render.py  logging.py  math_img_processing.py  math_recognizer.py  math_recognizer_parser.py
SERVICE_MATH_SOLVE/: .dockerignore  dockerfile  pyproject.toml  req.txt  service_math_config.toml  service_math_solve.py  setup.py
SERVICE_MATH_SOLVE/debug/: debug.json
SERVICE_MATH_SOLVE/proto/: service_math_solve.proto  service_math_solve_pb2.py  service_math_solve_pb2_grpc.py
SERVICE_MATH_SOLVE/src/core/: config.py  logging.py  utils.py
SERVICE_MATH_SOLVE/src/services/: grpc_server.py  logging.py  math_solver.py  mathsolve.py
SERVICE_MATH_SOLVE/src/services/alghoritms/: quadratic_equations.py
alembic_migrations/: pyproject.toml  sync_dependencies.sh
alembic_migrations/src/core/: utils.py
authorizer/: dockerfile  main.py  pyproject.toml  setup.py
authorizer/certs/: jwt-private.pem  jwt-public.pem
authorizer/proto/: authorizer.proto  gateway.proto
authorizer/src/grpc/: grpc_server.py
authorizer/src/grpc/client/: base_grpc_client.py  factory_grpc_client.py
authorizer/src/services/: authorizer.py  fastapi_server.py  jwt_parser.py
authorizer/src/services/auth/: auth_service.py
authorizer/src/services/jwt/: jwt_parser.py
authorizer/src/services/media_process/: media_processor.py
authorizer/src/services/routers/: base_router.py
authorizer/src/services/routers/tokens/: token_router.py
authorizer/src/services/routers/users/: user_router.py
db_manager/: pyproject.toml
db_manager/src/core/: utils.py
db_manager/src/notebooks/: drop_all_tables.ipynb
frontend/: .gitignore  dockerfile  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.mts
frontend/config/: eslint.mjs  prettier.json  stylelint.cjs
frontend/scripts/: enforce-blank-lines.mjs  lint-format.sh
frontend/src/: animations.js  auth.js  examples.js  logo.js  main.js  router.js  theme.js
frontend/src/api/: client.js
frontend/src/core/: config.js  constants.js  utils.js
frontend/src/pages/: Auth.js  Home.js  Recognize.js  Render.js  Solve.js
frontend/src/styles/: main.css
gateway/: .dockerignore  Dockerfile  dockerfile  external_api_config.toml  external_api_gateway.go  go.mod  go.sum  main.py  pyproject.toml  setup.py
gateway/grpc/handler/: handler.go
gateway/proto/: external_api_gateway.proto
gateway/src/core/: config.py  logging.py
gateway_python/: dockerfile  pyproject.toml  setup.py
gateway_python/src/core/: utils.py
gateway_python/src/fastapi_gateway/: external_gateway.py  fastapi_handler.py  gateway.py
gateway_python/src/grpc/: grpc_client_for_gateway.py  grpc_server.py
grafana/: dockerfile
init-scripts/: init-template.sql
math_solve/: pyproject.toml  setup.py
math_solve/proto/: service_math_solve.proto
math_solve/src/core/: config.py  logging.py  utils.py
math_solve/src/grpc/: grpc_client_for_gateway.py  grpc_requests.py  grpc_server.py
math_solve/src/grpc/client/: base_grpc_client.py  factory_grpc_client.py  registry_grpc_clients.py
math_solve/src/services/: grpc_server.py  math_solver.py
minikube/: configmap.yaml  node-port.yml  pod.yml
nginx/: default.conf.template  dockerfile
nginx/init-scripts/: default.conf.template  entrypoint.sh  template.conf
postgres/: dockerfile
postgres/init-scripts/: entrypoint.sh  init-db.sh  init-template.sql
prometheus/: dockerfile  prometheus.yml
recognize_latex/: pyproject.toml  setup.py
recognize_latex/proto/: service_math_recognize.proto
recognizer/: .dockerignore  dockerfile  main.py  pyproject.toml  setup.py
recognizer/proto/: authorizer.proto
render_latex/: pyproject.toml
render_latex/src/services/: math_latex_render.py
renderer/: .dockerignore  dockerfile  main.py  pyproject.toml  setup.py
renderer/proto/: service_math_render.proto
res/: req_MaL.txt  requirements.txt
res/go/: _Server_.go
solver/: .dockerignore  entrypoint.sh  main.py  pyproject.toml  setup.py
solver/proto/: service_math_solve.proto
solver/src/: __init__.py
temp_files/: output.txt  temp.tex
(+81 files in other folders)
