[project]
name = "service_mathsolve"
version = "0.0.1"
dependencies = [
    "loguru==0.7.3",
    "mpmath==1.3.0",
    "sympy==1.14.0",
    "toml==0.10.2",
    "grpcio-tools==1.72.1",
    "grpcio-reflection",
    "antlr4-python3-runtime==4.11.1",
]
LOGGING_REQUESTS = true
LOGGING_RESPONSES = false


[MaL]
PRECISION = 32
DEFAULT_PREC = 64


[host]
HOST = "0.0.0.0"    
PORT = 8001
reload = true
debug_mode = true