[project]
name = "service_mathsolve"
version = "0.0.1"
requires-python = ">=3.13.2"
dependencies = [
    "loguru==0.7.3",
    "mpmath==1.3.0",
    "sympy==1.14.0",
    "antlr4-python3-runtime==4.11.1",
    "grpcio-tools==1.72.1",
    "grpcio-reflection==1.72.1",
    "colorama==0.4.6",
    "tabulate==0.9.0",
    "chardet==5.2.0",
    "python-dotenv==1.1.0",
]
show_params_on_run = true


[MaL]
precision = 32
default_precision = 64


[grpc_server]
host = "0.0.0.0"
port = 8001
reload = true
log_requests = true
log_responses = false