[project]
name = "service_mathsolve"
version = "0.0.2"
requires-python = "==3.13.2"
dependencies = [
    "loguru==0.7.3",
    "mpmath==1.3.0",
    "sympy==1.14.0",
    "antlr4-python3-runtime==4.11.1",
    "grpcio-tools==1.72.1",
    "grpcio-reflection==1.72.1",
    "colorama==0.4.6",
    "tabulate==0.9.0",
    "chardet==5.2.0",
    "python-dotenv==1.1.0",
    # "git+https://github.com/dagahan/EyeMath_protos#subdirectory=EyeMath_protos/py",
]
show_params_on_run = true
# debug_mode parameter is declaring in .env file!


# [tool.ruff]
# line-length = 88


[tool.ruff.lint]
extend-select = ["W", "N", "R", "I"]
# Letters means included rules classes from PEP8
ignore = ["W293"]


[math]
precision = 32
default_precision = 64
using_algorithms_solving = true


# [grpc_client]



[grpc_server]
max_workers = 15
host = "0.0.0.0"
port = 8001
reload = true
log_requests = true
log_responses = true
log_huge_reqs_and_resps = false
replace_huge_logs_by_small_msgs = true
count_of_chars_in_huge_logs = 200