[project]
name = "service_mathrender"
version = "0.0.1"
requires-python = "==3.13.2"
dependencies = [
    "loguru==0.7.3",
    "grpcio-tools==1.72.1",
    "grpcio-reflection==1.72.1",
    "colorama==0.4.6",
    "tabulate==0.9.0",
    "chardet==5.2.0",
    "python-dotenv==1.1.0",
    "opencv-python==4.11.0.86",
    "matplotlib==3.10.3",
]
show_params_on_run = true
# debug_mode parameter is declaring in .env file!


# [tool.ruff]
# line-length = 88


[tool.ruff.lint]
extend-select = ["W", "N", "R", "I"]
# Letters means included rules classes from PEP8
ignore = ["W293"]


[latex_render]
save_render_img = true
render_dpi = 300
rendered_img_dir = "rendered_images"


[grpc_server]
max_workers = 15
host = "0.0.0.0"
port = 8003
reload = true
log_requests = true
log_responses = false
log_huge_reqs_and_resps = false
replace_huge_logs_by_small_msgs = true
count_of_chars_in_huge_logs = 200